--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "knex": "<0.20.0",
     "pg": "^8.5.1",
     "pg-connection-string": "^2.5.0",
+    "strapi-plugin-config-sync": "1.0.0-beta.4",
+    "@strapi/plugin-documentation": "4.0.4",
     "@strapi/strapi": "4.0.4",
     "@strapi/plugin-users-permissions": "4.0.4",
     "@strapi/plugin-i18n": "4.0.4",
